<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/lights_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/lights"
        android:textColor="@color/colorLabel"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/on_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:background="@drawable/button_bg"
        android:text="@string/on"
        android:textColor="@color/colorButtonFG"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/lights_label"
        app:layout_constraintStart_toEndOf="@+id/lights_label"
        app:layout_constraintTop_toTopOf="@+id/lights_label" />

    <Button
        android:id="@+id/off_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@drawable/button_bg"
        android:text="@string/off"
        android:textColor="@color/colorButtonFG"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/on_btn"
        app:layout_constraintStart_toEndOf="@+id/on_btn"
        app:layout_constraintTop_toTopOf="@+id/on_btn" />
</androidx.constraintlayout.widget.ConstraintLayout>